hard-gists/8883307/run.log
=== Docker Run Log for 8883307 ===
Started at: Mi 29. Okt 18:04:03 CET 2025

[2025-10-29 18:04:03] START: Running container for 8883307
[2025-10-29 18:04:04] SUCCESS: Container 36e95bf95e85de66babd362a2825e6dabaac8f90db7d298fc8194126e81d91f3 started for 8883307
=== Container logs for 8883307 ===
  File "/snippet.py", line 113
    print "Driver name:", caps.szPname
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 8883307 ===
[2025-10-29 18:04:06] INFO: Container 36e95bf95e85de66babd362a2825e6dabaac8f90db7d298fc8194126e81d91f3 has stopped
